tests/compile-fail/suzu_location_name_conflict.stderr
error: field 'location' exists but is not of type Location; rename it or use #[suzu(location)] on the correct field
 --> tests/compile-fail/suzu_location_name_conflict.rs:7:5
  |
7 |     location: String,
  |     ^^^^^^^^
